[package]
name = "landonbin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
reqwest = { version = "0.11.6", features = ["blocking", "json"] }
serde_json = "1.0.68"

[[bin]]
name = "landonbin"
path = "landonbin.rs"
