[package]
name = "landonbin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.2"
reqwest = { version = "0.11.8", features = ["blocking", "json"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
atty = "0.2.14"
clipboard = "0.5.0"


[[bin]]
name = "landonbin"
path = "landonbin.rs"
